syntax = "proto3";

package protocol;

option go_package = "github.com/dvid-messanger/protos/gen/go/protocol;protocolv1";

enum ChatType {
  UNKNOWN = 0;
  PERSONAL = 1;
}

message Chat {
  bytes id = 1;
  ChatType type = 2;
  repeated ChatMember chat_members = 3;
}

message ChatMember {
  bytes uid = 1;
}

message ChatMessage {
  bytes id = 1;
  bytes cid = 2;
  bytes uid = 3;
  string text = 4;
  int64 timestamp = 5;
}

message User {
  bytes id = 1;
  string email = 2;
  string bio = 3;
}